# rgp

./: .env.example  .gitignore  CLA.md  CONTRIBUTING.md  LICENSE.md  README.md  build_pack_1.md  build_pack_2.md  build_pack_3.md  c4-1.puml  c4-depl.puml  constitution.md  design_system.md  epics.md  ia.md  lambda_dynamodb_inventory.md  lambda_dynamodb_remediation_plan.md  package.json  pnpm-lock.yaml  proc.puml  requirements.md  style_guide.md  swim.puml  tsconfig.base.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260330_0001_initial_schema.py  20260330_0002_request_relationships.py  20260330_0003_artifact_history.py  20260330_0004_check_controls.py  20260331_0005_transition_gates.py  20260331_0006_check_runs.py  20260331_0007_admin_tenant_partitioning.py  20260331_0008_deployment_executions.py  20260331_0009_runtime_dispatches.py  20260331_0010_runtime_signals.py  20260331_0011_runtime_signal_event_id.py  20260331_0012_idempotency_keys.py  20260331_0013_template_schema_refresh.py  20260331_0014_template_routing_refresh.py  20260331_0015_event_store.py  20260331_0016_event_outbox.py  20260331_0017_template_conditional_rules.py  20260331_0018_performance_metrics.py  20260331_0019_org_model.py  20260401_0020_agent_sessions.py  20260401_0021_integration_settings.py  20260401_0022_agent_session_resume_status.py  20260402_0023_user_account_lifecycle.py  20260403_0024_organizations.py  20260403_0025_tenants.py  20260403_0026_workflow_execution_engine.py  (+15 more)
apps/api/app/: __init__.py  factory.py  lambda_entrypoint.py  main.py  runtime_bootstrap.py  transport.py
apps/worker/: pyproject.toml
apps/worker/worker/: __init__.py  app.py
docs/: 404.md  (+6 more)
(+293 files in other folders)
