[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgp-worker"
version = "0.1.0"
description = "Request Governance Platform worker"
license = { text = "PolyForm Noncommercial 1.0.0 (see repository LICENSE.md)" }
requires-python = ">=3.11"
dependencies = [
  "celery>=5.4.0",
  "pydantic-settings>=2.8.1",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.38"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*"]
